fix merged targets results icons and details
Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>