@@ -790,26 +790,27 @@ public class InjectExpectationService {
 
   // -- BY TARGET TYPE
 
-  public List<InjectExpectation> findExpectationsByInjectAndTargetAndTargetType(
+  public List<InjectExpectation> findMergedExpectationsByInjectAndTargetAndTargetType(
       @NotBlank final String injectId,
       @NotBlank final String targetId,
       @NotBlank final String targetType) {
     try {
       TargetType targetTypeEnum = TargetType.valueOf(targetType);
-      return switch (targetTypeEnum) {
-        case TEAMS -> injectExpectationRepository.findAllByInjectAndTeam(injectId, targetId);
-        case PLAYER -> injectExpectationRepository.findAllByInjectAndPlayer(injectId, targetId);
-        case AGENT -> injectExpectationRepository.findAllByInjectAndAgent(injectId, targetId);
-        case ASSETS -> injectExpectationRepository.findAllByInjectAndAsset(injectId, targetId);
-        case ASSETS_GROUPS ->
-            injectExpectationRepository.findAllByInjectAndAssetGroup(injectId, targetId);
-      };
+      return mergeExpectationResultsByExpectationType(
+          switch (targetTypeEnum) {
+            case TEAMS, ASSETS_GROUPS ->
+                this.findMergedExpectationsByInjectAndTargetAndTargetType(
+                    injectId, targetId, "not applicable", targetType);
+            case PLAYER -> injectExpectationRepository.findAllByInjectAndPlayer(injectId, targetId);
+            case AGENT -> injectExpectationRepository.findAllByInjectAndAgent(injectId, targetId);
+            case ASSETS -> injectExpectationRepository.findAllByInjectAndAsset(injectId, targetId);
+          });
     } catch (IllegalArgumentException e) {
       return Collections.emptyList();
     }
   }
 
-  public List<InjectExpectation> findExpectationsByInjectAndTargetAndTargetType(
+  public List<InjectExpectation> findMergedExpectationsByInjectAndTargetAndTargetType(
       @NotBlank final String injectId,
       @NotBlank final String targetId,
       @NotBlank final String parentTargetId,
@@ -835,24 +836,26 @@ public class InjectExpectationService {
     }
   }
 
-  public List<InjectExpectation> findExpectationsByInjectAndTargetAndTargetTypeUnderAllParents(
-      @NotBlank final String injectId,
-      @NotBlank final String targetId,
-      @NotBlank final String targetType) {
-    try {
-      TargetType targetTypeEnum = TargetType.valueOf(targetType);
-      return switch (targetTypeEnum) {
-        // forward this call to the more specific method since there is no difference here
-        case TEAMS, ASSETS_GROUPS ->
-            this.findExpectationsByInjectAndTargetAndTargetType(
-                injectId, targetId, "not applicable", targetType);
-        case PLAYER -> injectExpectationRepository.findAllByInjectAndPlayer(injectId, targetId);
-        case AGENT -> injectExpectationRepository.findAllByInjectAndAgent(injectId, targetId);
-        case ASSETS -> injectExpectationRepository.findAllByInjectAndAsset(injectId, targetId);
-      };
-    } catch (IllegalArgumentException e) {
-      return Collections.emptyList();
+  private List<InjectExpectation> mergeExpectationResultsByExpectationType(
+      List<InjectExpectation> expectations) {
+    List<String> notCopiedSourceTypes = List.of("collector");
+
+    HashMap<InjectExpectation.EXPECTATION_TYPE, InjectExpectation> electedExpectations =
+        new HashMap<>();
+    for (InjectExpectation expectation : expectations) {
+      if (!electedExpectations.containsKey(expectation.getType())) {
+        electedExpectations.put(expectation.getType(), expectation);
+        continue;
+      }
+
+      for (InjectExpectationResult expectationResult : expectation.getResults()) {
+        if (!notCopiedSourceTypes.contains(expectationResult.getSourceType())) {
+          electedExpectations.get(expectation.getType()).getResults().add(expectationResult);
+        }
+      }
     }
+
+    return electedExpectations.values().stream().toList();
   }
 
   // -- BUILD AND SAVE INJECT EXPECTATION --
